--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 name = "rays"
 
 [dependencies]
+clap = "2.33.0"
 error-chain = "0.12.0"
 lazy_static = "1.3.0"
 minifb = "0.12.0"
