--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ name = "rays"
 [dependencies]
 clap = "2.33.0"
 error-chain = "0.12.0"
+indicatif = "0.11.0"
 lazy_static = "1.3.0"
 minifb = "0.12.0"
 rand = "0.7.0"
