--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ impl_ops = "0.1.1"
 lazy_static = "1.3.0"
 minifb = "0.12.0"
 rand = "0.7.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8"
