--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ edition = "2018"
 name = "rays"
 
 [dependencies]
-clap = "2.33.0"
 error-chain = "0.12.0"
 impl_ops = "0.1.1"
 lazy_static = "1.3.0"
@@ -20,3 +19,7 @@ rand = "0.7.0"
 serde = "1.0"
 serde_yaml = "0.8"
 typetag = "0.1"
+
+[dependencies.clap]
+version = "2.33"
+features = [ "wrap_help" ]
