--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,6 @@ serde = "1.0"
 serde_yaml = "0.8"
 typetag = "0.1"
 
-[dependencies.clap]
-version = "2.33"
+[dependencies.structopt]
+version = "0.2"
 features = [ "wrap_help" ]
